# tepe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: binaries.yml  cargo-publish.yml  deploy.yml
src/: cli.yml  error.rs  lib.rs  main.rs
src/lib/: error.rs  file_ext.rs  mod.rs  send.rs
