[package]
name = "tepe"
version = "0.0.3"
authors = ["Hermitter"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Hermitter/tepe"
license = "MIT"
description = "A CLI to command a bot to send messages and files over Telegram."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
tokio = "0.2.11"
clap = {version = "2.33.1", features = ["yaml"]}
lazy_static = "1.4.0"